--- a/index.html
+++ b/index.html
@@ -64,5 +64,145 @@
             </div>
         </div>
     </header>
+    <!-- header end -->
+    <main>
+        <!-- players section -->
+        <section class="players-container">
+            <div class="players">
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-1.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h3>Neimar jr</h3>
+                        <p class="grey">
+                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-2.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h3>Neimar jr</h3>
+                        <p class="grey">
+                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-3.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h3>Neimar jr</h3>
+                        <p class="grey">
+                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-4.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h3>Neimar jr</h3>
+                        <p class="grey">
+                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-5.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h3>Neimar jr</h3>
+                        <p class="grey">
+                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-6.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h3>Neimar jr</h3>
+                        <p class="grey">
+                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-7.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h3>Neimar jr</h3>
+                        <p class="grey">
+                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-8.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h3>Neimar jr</h3>
+                        <p class="grey">
+                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-9.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h3>Neimar jr</h3>
+                        <p class="grey">
+                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-10.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h3>Neimar jr</h3>
+                        <p class="grey">
+                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-11.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h3>Neimar jr</h3>
+                        <p class="grey">
+                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-12.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h3>Neimar jr</h3>
+                        <p class="grey">
+                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
