Match Higlights added

--- a/index.html
+++ b/index.html
@@ -203,6 +203,23 @@
                 </div>
             </div>
         </section>
+        <!-- Match Highlights Section -->
+        <section class="match-highlights">
+            <div class="match-highlights-info">
+                <div>
+                    <h1>All Highlights</h1>
+                <h1>Copa America 2021</h1>
+                <p class="grey">Copa America 2021 is over, and Argentina is the queen of South America after 28 years, with Messi finally winning his first international title. It was a long journey with 4 group matches and three knock-out matches. But let’s overview how the tournament went</p>
+                <button class="button">
+                    Watch Now
+                    <i class="fas fa-arrow-right"></i>
+                </button>
+                </div>
+            </div>
+            <div class="match-highlights-photo">
+                <img src="images/match.png" alt="">
+            </div>
+        </section>
     </main>
 </body>
 </html>
