Match details added

--- a/index.html
+++ b/index.html
@@ -208,16 +208,32 @@
             <div class="match-highlights-info">
                 <div>
                     <h1>All Highlights</h1>
-                <h1>Copa America 2021</h1>
-                <p class="grey">Copa America 2021 is over, and Argentina is the queen of South America after 28 years, with Messi finally winning his first international title. It was a long journey with 4 group matches and three knock-out matches. But let’s overview how the tournament went</p>
-                <button class="button">
-                    Watch Now
-                    <i class="fas fa-arrow-right"></i>
-                </button>
+                    <h1>Copa America 2021</h1>
+                    <p class="grey">Copa America 2021 is over, and Argentina is the queen of South America after 28 years, with Messi finally winning his first international title. It was a long journey with 4 group matches and three knock-out matches. But let’s overview how the tournament went</p>
+                    <button class="button">
+                        Watch Now
+                        <i class="fas fa-arrow-right"></i>
+                    </button>
                 </div>
             </div>
             <div class="match-highlights-photo">
                 <img src="images/match.png" alt="">
+            </div>
+        </section>
+        <section class="match-details">
+            <div class="match-details-photo">
+                <img src="images/match2.jpg" alt="">
+            </div>
+            <div class="match-details-info">
+                <div>
+                    <h1>Full Details</h1>
+                    <h1>Copa America 2021</h1>
+                    <p class="grey">Get the full information about copa America 2021 match from our website. Please click on the button to get the updated details about the match.Thank you.</p>
+                    <button class="button">
+                        Watch Now
+                        <i class="fas fa-arrow-right"></i>
+                    </button>
+                </div>
             </div>
         </section>
     </main>
