News section added

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                     <h1>Copa America</h1>
                     <h1>2021</h1>
                 </div>
-                <button class="button  margin-left">
+                <a href=""><button class="button  margin-left">
                     watch live
                     <i class="fas fa-arrow-right"></i>
-                </button>
+                </button></a>
             </div>
 
             <div class="header-item">
@@ -69,7 +69,7 @@
         <!-- players section -->
         <section class="players-container">
             <div class="players">
-                <div class="player">
+                <article class="player">
                     <div class="player-image">
                         <img src="images/players/player-1.png" alt="">
                     </div>
@@ -79,8 +79,8 @@
                             Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
                         </p>
                     </div>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <div class="player-image">
                         <img src="images/players/player-2.png" alt="">
                     </div>
@@ -90,8 +90,8 @@
                             Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
                         </p>
                     </div>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <div class="player-image">
                         <img src="images/players/player-3.png" alt="">
                     </div>
@@ -101,8 +101,8 @@
                             Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
                         </p>
                     </div>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <div class="player-image">
                         <img src="images/players/player-4.png" alt="">
                     </div>
@@ -112,8 +112,8 @@
                             Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
                         </p>
                     </div>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <div class="player-image">
                         <img src="images/players/player-5.png" alt="">
                     </div>
@@ -123,8 +123,8 @@
                             Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
                         </p>
                     </div>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <div class="player-image">
                         <img src="images/players/player-6.png" alt="">
                     </div>
@@ -134,8 +134,8 @@
                             Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
                         </p>
                     </div>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <div class="player-image">
                         <img src="images/players/player-7.png" alt="">
                     </div>
@@ -145,8 +145,8 @@
                             Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
                         </p>
                     </div>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <div class="player-image">
                         <img src="images/players/player-8.png" alt="">
                     </div>
@@ -156,8 +156,8 @@
                             Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
                         </p>
                     </div>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <div class="player-image">
                         <img src="images/players/player-9.png" alt="">
                     </div>
@@ -167,8 +167,8 @@
                             Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
                         </p>
                     </div>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <div class="player-image">
                         <img src="images/players/player-10.png" alt="">
                     </div>
@@ -178,8 +178,8 @@
                             Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
                         </p>
                     </div>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <div class="player-image">
                         <img src="images/players/player-11.png" alt="">
                     </div>
@@ -189,8 +189,8 @@
                             Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
                         </p>
                     </div>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <div class="player-image">
                         <img src="images/players/player-12.png" alt="">
                     </div>
@@ -200,7 +200,7 @@
                             Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
                         </p>
                     </div>
-                </div>
+                </article>
             </div>
         </section>
         <!-- Match Highlights Section -->
@@ -210,10 +210,10 @@
                     <h1>All Highlights</h1>
                     <h1>Copa America 2021</h1>
                     <p class="grey">Copa America 2021 is over, and Argentina is the queen of South America after 28 years, with Messi finally winning his first international title. It was a long journey with 4 group matches and three knock-out matches. But let’s overview how the tournament went</p>
-                    <button class="button">
+                    <a href=""><button class="button">
                         Watch Now
                         <i class="fas fa-arrow-right"></i>
-                    </button>
+                    </button></a>
                 </div>
             </div>
             <div class="match-highlights-photo">
@@ -229,11 +229,31 @@
                     <h1>Full Details</h1>
                     <h1>Copa America 2021</h1>
                     <p class="grey">Get the full information about copa America 2021 match from our website. Please click on the button to get the updated details about the match.Thank you.</p>
-                    <button class="button">
+                    <a href=""><button class="button">
                         Watch Now
                         <i class="fas fa-arrow-right"></i>
-                    </button>
+                    </button></a>
                 </div>
+            </div>
+        </section>
+        <section class="latest-news">
+            <h1>Latest News</h1>
+            <div class="news-container">
+                    <div class="news">
+                        <div><img src="images/players/player-8.png" alt=""></div>
+                        <h1><a href="">Transformation Explained</a></h1>
+                        <p class="grey">England fell short of Euro 2020 glory but the tournament represents another significant step forward under Gareth Southgate.</p>
+                    </div>
+                    <div class="news">
+                        <div><img src="images/players/player-9.png" alt=""></div>
+                        <h1><a href="">United remains caution</a></h1>
+                        <p class="grey">England fell short of Euro 2020 glory but the tournament represents another significant step forward under Gareth Southgate.</p>
+                    </div>
+                    <div class="news">
+                        <div><img src="images/players/player-11.png" alt=""></div>
+                        <h1><a href="">Premier league kits</a></h1>
+                        <p class="grey">When does the 2021/22 Premier League season get underway this summer, when does the EFL term start and what about cup dates and European competition?</p>
+                    </div>
             </div>
         </section>
     </main>
