--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style/style.css">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/dcc1c5255e.js" crossorigin="anonymous"></script>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="images/ball2.png" type="image/x-icon">
 </head>
 <body>
     <!-- Header start -->
@@ -85,10 +87,9 @@
                         <img src="images/players/player-2.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Neimar jr</h3>
+                        <h3>Lionel Messi</h3>
                         <p class="grey">
-                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
-                        </p>
+                            Lionel Andrés Messi is an Argentine professional footballer who plays as a forward and captains the Argentina national team.                        </p>
                     </div>
                 </article>
                 <article class="player">
@@ -96,10 +97,9 @@
                         <img src="images/players/player-3.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Neimar jr</h3>
+                        <h3>Cristiano Ronaldo</h3>
                         <p class="grey">
-                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
-                        </p>
+                            Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.                         </p>
                     </div>
                 </article>
                 <article class="player">
@@ -107,10 +107,9 @@
                         <img src="images/players/player-4.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Neimar jr</h3>
+                        <h3>Paulo Dybala</h3>
                         <p class="grey">
-                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
-                        </p>
+                            Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.                        </p>
                     </div>
                 </article>
                 <article class="player">
@@ -118,10 +117,9 @@
                         <img src="images/players/player-5.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Neimar jr</h3>
+                        <h3>Mesut Ozil</h3>
                         <p class="grey">
-                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
-                        </p>
+                            Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King", Özil is known for his technical skills, creativity,                        </p>
                     </div>
                 </article>
                 <article class="player">
@@ -129,10 +127,9 @@
                         <img src="images/players/player-6.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Neimar jr</h3>
+                        <h3>Philippe Coutinho</h3>
                         <p class="grey">
-                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
-                        </p>
+                            Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.                        </p>
                     </div>
                 </article>
                 <article class="player">
@@ -140,10 +137,9 @@
                         <img src="images/players/player-7.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Neimar jr</h3>
+                        <h3>Mauro Icardi</h3>
                         <p class="grey">
-                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
-                        </p>
+                            Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.                        </p>
                     </div>
                 </article>
                 <article class="player">
@@ -151,10 +147,9 @@
                         <img src="images/players/player-8.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Neimar jr</h3>
+                        <h3>Di Maria</h3>
                         <p class="grey">
-                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
-                        </p>
+                            Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger or attacking midfielder.                        </p>
                     </div>
                 </article>
                 <article class="player">
@@ -162,10 +157,9 @@
                         <img src="images/players/player-9.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Neimar jr</h3>
+                        <h3>Kylian Mbappé</h3>
                         <p class="grey">
-                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
-                        </p>
+                            Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.                        </p>
                     </div>
                 </article>
                 <article class="player">
@@ -173,10 +167,9 @@
                         <img src="images/players/player-10.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Neimar jr</h3>
+                        <h3>Mohamed Salah</h3>
                         <p class="grey">
-                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
-                        </p>
+                            Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team.                         </p>
                     </div>
                 </article>
                 <article class="player">
@@ -184,10 +177,9 @@
                         <img src="images/players/player-11.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Neimar jr</h3>
+                        <h3>Harry Kane</h3>
                         <p class="grey">
-                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
-                        </p>
+                            Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team.                         </p>
                     </div>
                 </article>
                 <article class="player">
@@ -195,10 +187,9 @@
                         <img src="images/players/player-12.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Neimar jr</h3>
+                        <h3>Kevin De Bruyne</h3>
                         <p class="grey">
-                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
-                        </p>
+                            Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City,                         </p>
                     </div>
                 </article>
             </div>
@@ -257,5 +248,19 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div>
+            <img src="images/Logo.png" alt="">
+        </div>
+        <div class="footer-icon">
+            <a href=""><i class="fab fa-facebook grey"></i></a>
+            <a href=""><i class="fab fa-youtube grey"></i></a>
+            <a href=""><i class="fab fa-instagram grey"></i></a>
+            <a href=""><i class="fab fa-twitter grey"></i></a>
+        </div>
+        <div>
+            copyright &copy 2022 football
+        </div>
+    </footer>
 </body>
 </html>
